Fix social media icon spacing

--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -199,11 +199,18 @@ header {
 
   ul {
     display: flex;
-    gap: 1rem;
     justify-content: center;
     list-style: none;
     margin: 0;
     padding: 0;
+  }
+
+  li {
+    margin-left: 1rem;
+
+    &:first-child {
+      margin-left: 0;
+    }
   }
 
   .logo,
@@ -234,7 +241,7 @@ header {
     li {
       &::before {
         content: "\2022";
-        margin-right: 12px;
+        margin-right: 1rem;
       }
 
       &:first-child {
@@ -293,11 +300,18 @@ footer {
 .social {
   ul {
     display: flex;
-    gap: 1rem;
     justify-content: center;
     list-style: none;
     margin: 0;
     padding: 0;
+
+    li {
+      margin-left: 1.5rem;
+
+      &:first-child {
+        margin-left: 0;
+      }
+    }
   }
 }
 
